refactor: clean up imports and use JCRSessionFactory for privilege check
- Consolidate VFS2 and java.util imports with wildcard imports
- Reorder imports to follow standard convention (org.* before javax.*)
- Move toJcrPath() helper earlier in the class (before setRoot())
- Use List.of() instead of Arrays.asList() for JCR_CONTENT_LIST
- Replace ServicesRegistry.getInstance().getJahiaGroupManagerService()
  with JCRSessionFactory.getInstance().getCurrentUserSession() +
  hasPermission("admin") for the privilege check in getPrivilegesNames()

Signed-off-by: Florent BOURASSE <fbourasse@jahia.com>